--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.5"
   }
 }
